Analisador Sintático/ply/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> declaracao
Rule 2     programa -> declaracao programa
Rule 3     declaracao -> declaracaoVariavel
Rule 4     declaracao -> declaracaoFuncao
Rule 5     declaracao -> declaracaoEstrutura
Rule 6     declaracao -> comentario
Rule 7     declaracaoVariavel -> TIPO ID SEMICOLON
Rule 8     declaracaoVariavel -> TIPO ID EQUALS expressao SEMICOLON
Rule 9     declaracaoVariavel -> TIPO array SEMICOLON
Rule 10    declaracaoVariavel -> TIPO array EQUALS TEXTO SEMICOLON
Rule 11    array -> ID LBRACKET RBRACKET
Rule 12    declaracaoFuncao -> TIPO ID LPAREN parametros RPAREN bloco
Rule 13    parametros -> parametro
Rule 14    parametros -> parametro COMMA parametros
Rule 15    parametro -> TIPO ID
Rule 16    parametro -> TIPO ID LBRACKET RBRACKET
Rule 17    parametro -> TIPO DOTDOTDOT ID
Rule 18    comentario -> COMMENT
Rule 19    bloco -> LBRACE declaracao RBRACE
Rule 20    declaracaoEstrutura -> LBRACE declaracaoVariavel RBRACE SEMICOLON
Rule 21    expressaoLogica -> expressaoRelacional
Rule 22    expressaoLogica -> expressaoLogica OROR expressaoRelacional
Rule 23    expressaoLogica -> expressaoLogica ANDAND expressaoRelacional
Rule 24    expressaoLogica -> NOT expressaoRelacional
Rule 25    expressaoRelacional -> expressaoAritmetica
Rule 26    expressaoRelacional -> expressaoAritmetica GREATER expressaoAritmetica
Rule 27    expressaoRelacional -> expressaoAritmetica LESS expressaoAritmetica
Rule 28    expressaoRelacional -> expressaoAritmetica GREATEREQUAL expressaoAritmetica
Rule 29    expressaoRelacional -> expressaoAritmetica LESSEQUAL expressaoAritmetica
Rule 30    expressaoRelacional -> expressaoAritmetica NOTEQUAL expressaoAritmetica
Rule 31    expressaoRelacional -> expressaoAritmetica EQUAL expressaoAritmetica
Rule 32    expressao -> expressaoLogica
Rule 33    expressao -> atribuicao
Rule 34    atribuicao -> ID EQUALS expressao
Rule 35    atribuicao -> ID PLUSEQUAL expressao
Rule 36    atribuicao -> ID MINUSEQUAL expressao
Rule 37    atribuicao -> ID TIMESEQUAL expressao
Rule 38    atribuicao -> ID DIVEQUAL expressao
Rule 39    atribuicao -> ID MODEQUAL expressao
Rule 40    atribuicao -> ID ANDANDEQUAL expressao
Rule 41    atribuicao -> ID OROREQUAL expressao
Rule 42    expressaoAritmetica -> expressaoMultiplicativa
Rule 43    expressaoAritmetica -> expressaoAritmetica PLUS expressaoMultiplicativa
Rule 44    expressaoAritmetica -> expressaoAritmetica MINUS expressaoMultiplicativa
Rule 45    expressaoMultiplicativa -> expressaoMultiplicativa TIMES expressaoUnaria
Rule 46    expressaoMultiplicativa -> expressaoMultiplicativa DIVIDE expressaoUnaria
Rule 47    expressaoMultiplicativa -> expressaoMultiplicativa MODULO expressaoUnaria
Rule 48    expressaoMultiplicativa -> expressaoUnaria
Rule 49    expressaoUnaria -> expressaoPostfix
Rule 50    expressaoUnaria -> MINUS expressaoPostfix
Rule 51    expressaoUnaria -> PLUS PLUS expressaoPostfix
Rule 52    expressaoUnaria -> MINUS MINUS expressaoPostfix
Rule 53    expressaoPostfix -> primaria
Rule 54    expressaoPostfix -> primaria LBRACKET expressao RBRACKET
Rule 55    expressaoPostfix -> primaria LPAREN argumentos RPAREN
Rule 56    expressaoPostfix -> primaria DOT ID
Rule 57    expressaoPostfix -> primaria ARROW ID
Rule 58    argumentos -> <empty>
Rule 59    primaria -> ID
Rule 60    primaria -> NUM_INT
Rule 61    primaria -> NUM_DEC
Rule 62    primaria -> LPAREN expressao LPAREN
Rule 63    primaria -> TEXTO

Terminals, with rules where they appear

ANDAND               : 23
ANDANDEQUAL          : 40
ARROW                : 57
COMMA                : 14
COMMENT              : 18
DIVEQUAL             : 38
DIVIDE               : 46
DOT                  : 56
DOTDOTDOT            : 17
EQUAL                : 31
EQUALS               : 8 10 34
GREATER              : 26
GREATEREQUAL         : 28
ID                   : 7 8 11 12 15 16 17 34 35 36 37 38 39 40 41 56 57 59
LBRACE               : 19 20
LBRACKET             : 11 16 54
LESS                 : 27
LESSEQUAL            : 29
LPAREN               : 12 55 62 62
MINUS                : 44 50 52 52
MINUSEQUAL           : 36
MODEQUAL             : 39
MODULO               : 47
NOT                  : 24
NOTEQUAL             : 30
NUM_DEC              : 61
NUM_INT              : 60
OROR                 : 22
OROREQUAL            : 41
PLUS                 : 43 51 51
PLUSEQUAL            : 35
RBRACE               : 19 20
RBRACKET             : 11 16 54
RPAREN               : 12 55
SEMICOLON            : 7 8 9 10 20
TEXTO                : 10 63
TIMES                : 45
TIMESEQUAL           : 37
TIPO                 : 7 8 9 10 12 15 16 17
error                : 

Nonterminals, with rules where they appear

argumentos           : 55
array                : 9 10
atribuicao           : 33
bloco                : 12
comentario           : 6
declaracao           : 1 2 19
declaracaoEstrutura  : 5
declaracaoFuncao     : 4
declaracaoVariavel   : 3 20
expressao            : 8 34 35 36 37 38 39 40 41 54 62
expressaoAritmetica  : 25 26 26 27 27 28 28 29 29 30 30 31 31 43 44
expressaoLogica      : 22 23 32
expressaoMultiplicativa : 42 43 44 45 46 47
expressaoPostfix     : 49 50 51 52
expressaoRelacional  : 21 22 23 24
expressaoUnaria      : 45 46 47 48
parametro            : 13 14
parametros           : 12 14
primaria             : 53 54 55 56 57
programa             : 2 0

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . declaracao
    (2) programa -> . declaracao programa
    (3) declaracao -> . declaracaoVariavel
    (4) declaracao -> . declaracaoFuncao
    (5) declaracao -> . declaracaoEstrutura
    (6) declaracao -> . comentario
    (7) declaracaoVariavel -> . TIPO ID SEMICOLON
    (8) declaracaoVariavel -> . TIPO ID EQUALS expressao SEMICOLON
    (9) declaracaoVariavel -> . TIPO array SEMICOLON
    (10) declaracaoVariavel -> . TIPO array EQUALS TEXTO SEMICOLON
    (12) declaracaoFuncao -> . TIPO ID LPAREN parametros RPAREN bloco
    (20) declaracaoEstrutura -> . LBRACE declaracaoVariavel RBRACE SEMICOLON
    (18) comentario -> . COMMENT

    TIPO            shift and go to state 7
    LBRACE          shift and go to state 8
    COMMENT         shift and go to state 9

    programa                       shift and go to state 1
    declaracao                     shift and go to state 2
    declaracaoVariavel             shift and go to state 3
    declaracaoFuncao               shift and go to state 4
    declaracaoEstrutura            shift and go to state 5
    comentario                     shift and go to state 6

state 1

    (0) S' -> programa .



state 2

    (1) programa -> declaracao .
    (2) programa -> declaracao . programa
    (1) programa -> . declaracao
    (2) programa -> . declaracao programa
    (3) declaracao -> . declaracaoVariavel
    (4) declaracao -> . declaracaoFuncao
    (5) declaracao -> . declaracaoEstrutura
    (6) declaracao -> . comentario
    (7) declaracaoVariavel -> . TIPO ID SEMICOLON
    (8) declaracaoVariavel -> . TIPO ID EQUALS expressao SEMICOLON
    (9) declaracaoVariavel -> . TIPO array SEMICOLON
    (10) declaracaoVariavel -> . TIPO array EQUALS TEXTO SEMICOLON
    (12) declaracaoFuncao -> . TIPO ID LPAREN parametros RPAREN bloco
    (20) declaracaoEstrutura -> . LBRACE declaracaoVariavel RBRACE SEMICOLON
    (18) comentario -> . COMMENT

    $end            reduce using rule 1 (programa -> declaracao .)
    TIPO            shift and go to state 7
    LBRACE          shift and go to state 8
    COMMENT         shift and go to state 9

    declaracao                     shift and go to state 2
    programa                       shift and go to state 10
    declaracaoVariavel             shift and go to state 3
    declaracaoFuncao               shift and go to state 4
    declaracaoEstrutura            shift and go to state 5
    comentario                     shift and go to state 6

state 3

    (3) declaracao -> declaracaoVariavel .

    TIPO            reduce using rule 3 (declaracao -> declaracaoVariavel .)
    LBRACE          reduce using rule 3 (declaracao -> declaracaoVariavel .)
    COMMENT         reduce using rule 3 (declaracao -> declaracaoVariavel .)
    $end            reduce using rule 3 (declaracao -> declaracaoVariavel .)
    RBRACE          reduce using rule 3 (declaracao -> declaracaoVariavel .)


state 4

    (4) declaracao -> declaracaoFuncao .

    TIPO            reduce using rule 4 (declaracao -> declaracaoFuncao .)
    LBRACE          reduce using rule 4 (declaracao -> declaracaoFuncao .)
    COMMENT         reduce using rule 4 (declaracao -> declaracaoFuncao .)
    $end            reduce using rule 4 (declaracao -> declaracaoFuncao .)
    RBRACE          reduce using rule 4 (declaracao -> declaracaoFuncao .)


state 5

    (5) declaracao -> declaracaoEstrutura .

    TIPO            reduce using rule 5 (declaracao -> declaracaoEstrutura .)
    LBRACE          reduce using rule 5 (declaracao -> declaracaoEstrutura .)
    COMMENT         reduce using rule 5 (declaracao -> declaracaoEstrutura .)
    $end            reduce using rule 5 (declaracao -> declaracaoEstrutura .)
    RBRACE          reduce using rule 5 (declaracao -> declaracaoEstrutura .)


state 6

    (6) declaracao -> comentario .

    TIPO            reduce using rule 6 (declaracao -> comentario .)
    LBRACE          reduce using rule 6 (declaracao -> comentario .)
    COMMENT         reduce using rule 6 (declaracao -> comentario .)
    $end            reduce using rule 6 (declaracao -> comentario .)
    RBRACE          reduce using rule 6 (declaracao -> comentario .)


state 7

    (7) declaracaoVariavel -> TIPO . ID SEMICOLON
    (8) declaracaoVariavel -> TIPO . ID EQUALS expressao SEMICOLON
    (9) declaracaoVariavel -> TIPO . array SEMICOLON
    (10) declaracaoVariavel -> TIPO . array EQUALS TEXTO SEMICOLON
    (12) declaracaoFuncao -> TIPO . ID LPAREN parametros RPAREN bloco
    (11) array -> . ID LBRACKET RBRACKET

    ID              shift and go to state 11

    array                          shift and go to state 12

state 8

    (20) declaracaoEstrutura -> LBRACE . declaracaoVariavel RBRACE SEMICOLON
    (7) declaracaoVariavel -> . TIPO ID SEMICOLON
    (8) declaracaoVariavel -> . TIPO ID EQUALS expressao SEMICOLON
    (9) declaracaoVariavel -> . TIPO array SEMICOLON
    (10) declaracaoVariavel -> . TIPO array EQUALS TEXTO SEMICOLON

    TIPO            shift and go to state 14

    declaracaoVariavel             shift and go to state 13

state 9

    (18) comentario -> COMMENT .

    TIPO            reduce using rule 18 (comentario -> COMMENT .)
    LBRACE          reduce using rule 18 (comentario -> COMMENT .)
    COMMENT         reduce using rule 18 (comentario -> COMMENT .)
    $end            reduce using rule 18 (comentario -> COMMENT .)
    RBRACE          reduce using rule 18 (comentario -> COMMENT .)


state 10

    (2) programa -> declaracao programa .

    $end            reduce using rule 2 (programa -> declaracao programa .)


state 11

    (7) declaracaoVariavel -> TIPO ID . SEMICOLON
    (8) declaracaoVariavel -> TIPO ID . EQUALS expressao SEMICOLON
    (12) declaracaoFuncao -> TIPO ID . LPAREN parametros RPAREN bloco
    (11) array -> ID . LBRACKET RBRACKET

    SEMICOLON       shift and go to state 15
    EQUALS          shift and go to state 16
    LPAREN          shift and go to state 17
    LBRACKET        shift and go to state 18


state 12

    (9) declaracaoVariavel -> TIPO array . SEMICOLON
    (10) declaracaoVariavel -> TIPO array . EQUALS TEXTO SEMICOLON

    SEMICOLON       shift and go to state 19
    EQUALS          shift and go to state 20


state 13

    (20) declaracaoEstrutura -> LBRACE declaracaoVariavel . RBRACE SEMICOLON

    RBRACE          shift and go to state 21


state 14

    (7) declaracaoVariavel -> TIPO . ID SEMICOLON
    (8) declaracaoVariavel -> TIPO . ID EQUALS expressao SEMICOLON
    (9) declaracaoVariavel -> TIPO . array SEMICOLON
    (10) declaracaoVariavel -> TIPO . array EQUALS TEXTO SEMICOLON
    (11) array -> . ID LBRACKET RBRACKET

    ID              shift and go to state 22

    array                          shift and go to state 12

state 15

    (7) declaracaoVariavel -> TIPO ID SEMICOLON .

    TIPO            reduce using rule 7 (declaracaoVariavel -> TIPO ID SEMICOLON .)
    LBRACE          reduce using rule 7 (declaracaoVariavel -> TIPO ID SEMICOLON .)
    COMMENT         reduce using rule 7 (declaracaoVariavel -> TIPO ID SEMICOLON .)
    $end            reduce using rule 7 (declaracaoVariavel -> TIPO ID SEMICOLON .)
    RBRACE          reduce using rule 7 (declaracaoVariavel -> TIPO ID SEMICOLON .)


state 16

    (8) declaracaoVariavel -> TIPO ID EQUALS . expressao SEMICOLON
    (32) expressao -> . expressaoLogica
    (33) expressao -> . atribuicao
    (21) expressaoLogica -> . expressaoRelacional
    (22) expressaoLogica -> . expressaoLogica OROR expressaoRelacional
    (23) expressaoLogica -> . expressaoLogica ANDAND expressaoRelacional
    (24) expressaoLogica -> . NOT expressaoRelacional
    (34) atribuicao -> . ID EQUALS expressao
    (35) atribuicao -> . ID PLUSEQUAL expressao
    (36) atribuicao -> . ID MINUSEQUAL expressao
    (37) atribuicao -> . ID TIMESEQUAL expressao
    (38) atribuicao -> . ID DIVEQUAL expressao
    (39) atribuicao -> . ID MODEQUAL expressao
    (40) atribuicao -> . ID ANDANDEQUAL expressao
    (41) atribuicao -> . ID OROREQUAL expressao
    (25) expressaoRelacional -> . expressaoAritmetica
    (26) expressaoRelacional -> . expressaoAritmetica GREATER expressaoAritmetica
    (27) expressaoRelacional -> . expressaoAritmetica LESS expressaoAritmetica
    (28) expressaoRelacional -> . expressaoAritmetica GREATEREQUAL expressaoAritmetica
    (29) expressaoRelacional -> . expressaoAritmetica LESSEQUAL expressaoAritmetica
    (30) expressaoRelacional -> . expressaoAritmetica NOTEQUAL expressaoAritmetica
    (31) expressaoRelacional -> . expressaoAritmetica EQUAL expressaoAritmetica
    (42) expressaoAritmetica -> . expressaoMultiplicativa
    (43) expressaoAritmetica -> . expressaoAritmetica PLUS expressaoMultiplicativa
    (44) expressaoAritmetica -> . expressaoAritmetica MINUS expressaoMultiplicativa
    (45) expressaoMultiplicativa -> . expressaoMultiplicativa TIMES expressaoUnaria
    (46) expressaoMultiplicativa -> . expressaoMultiplicativa DIVIDE expressaoUnaria
    (47) expressaoMultiplicativa -> . expressaoMultiplicativa MODULO expressaoUnaria
    (48) expressaoMultiplicativa -> . expressaoUnaria
    (49) expressaoUnaria -> . expressaoPostfix
    (50) expressaoUnaria -> . MINUS expressaoPostfix
    (51) expressaoUnaria -> . PLUS PLUS expressaoPostfix
    (52) expressaoUnaria -> . MINUS MINUS expressaoPostfix
    (53) expressaoPostfix -> . primaria
    (54) expressaoPostfix -> . primaria LBRACKET expressao RBRACKET
    (55) expressaoPostfix -> . primaria LPAREN argumentos RPAREN
    (56) expressaoPostfix -> . primaria DOT ID
    (57) expressaoPostfix -> . primaria ARROW ID
    (59) primaria -> . ID
    (60) primaria -> . NUM_INT
    (61) primaria -> . NUM_DEC
    (62) primaria -> . LPAREN expressao LPAREN
    (63) primaria -> . TEXTO

    NOT             shift and go to state 28
    ID              shift and go to state 23
    MINUS           shift and go to state 32
    PLUS            shift and go to state 31
    NUM_INT         shift and go to state 37
    NUM_DEC         shift and go to state 38
    LPAREN          shift and go to state 36
    TEXTO           shift and go to state 39

    expressao                      shift and go to state 24
    expressaoLogica                shift and go to state 25
    atribuicao                     shift and go to state 26
    expressaoRelacional            shift and go to state 27
    expressaoAritmetica            shift and go to state 29
    expressaoMultiplicativa        shift and go to state 30
    expressaoUnaria                shift and go to state 33
    expressaoPostfix               shift and go to state 34
    primaria                       shift and go to state 35

state 17

    (12) declaracaoFuncao -> TIPO ID LPAREN . parametros RPAREN bloco
    (13) parametros -> . parametro
    (14) parametros -> . parametro COMMA parametros
    (15) parametro -> . TIPO ID
    (16) parametro -> . TIPO ID LBRACKET RBRACKET
    (17) parametro -> . TIPO DOTDOTDOT ID

    TIPO            shift and go to state 40

    parametros                     shift and go to state 41
    parametro                      shift and go to state 42

state 18

    (11) array -> ID LBRACKET . RBRACKET

    RBRACKET        shift and go to state 43


state 19

    (9) declaracaoVariavel -> TIPO array SEMICOLON .

    TIPO            reduce using rule 9 (declaracaoVariavel -> TIPO array SEMICOLON .)
    LBRACE          reduce using rule 9 (declaracaoVariavel -> TIPO array SEMICOLON .)
    COMMENT         reduce using rule 9 (declaracaoVariavel -> TIPO array SEMICOLON .)
    $end            reduce using rule 9 (declaracaoVariavel -> TIPO array SEMICOLON .)
    RBRACE          reduce using rule 9 (declaracaoVariavel -> TIPO array SEMICOLON .)


state 20

    (10) declaracaoVariavel -> TIPO array EQUALS . TEXTO SEMICOLON

    TEXTO           shift and go to state 44


state 21

    (20) declaracaoEstrutura -> LBRACE declaracaoVariavel RBRACE . SEMICOLON

    SEMICOLON       shift and go to state 45


state 22

    (7) declaracaoVariavel -> TIPO ID . SEMICOLON
    (8) declaracaoVariavel -> TIPO ID . EQUALS expressao SEMICOLON
    (11) array -> ID . LBRACKET RBRACKET

    SEMICOLON       shift and go to state 15
    EQUALS          shift and go to state 16
    LBRACKET        shift and go to state 18


state 23

    (34) atribuicao -> ID . EQUALS expressao
    (35) atribuicao -> ID . PLUSEQUAL expressao
    (36) atribuicao -> ID . MINUSEQUAL expressao
    (37) atribuicao -> ID . TIMESEQUAL expressao
    (38) atribuicao -> ID . DIVEQUAL expressao
    (39) atribuicao -> ID . MODEQUAL expressao
    (40) atribuicao -> ID . ANDANDEQUAL expressao
    (41) atribuicao -> ID . OROREQUAL expressao
    (59) primaria -> ID .

    EQUALS          shift and go to state 46
    PLUSEQUAL       shift and go to state 47
    MINUSEQUAL      shift and go to state 48
    TIMESEQUAL      shift and go to state 49
    DIVEQUAL        shift and go to state 50
    MODEQUAL        shift and go to state 51
    ANDANDEQUAL     shift and go to state 52
    OROREQUAL       shift and go to state 53
    LBRACKET        reduce using rule 59 (primaria -> ID .)
    LPAREN          reduce using rule 59 (primaria -> ID .)
    DOT             reduce using rule 59 (primaria -> ID .)
    ARROW           reduce using rule 59 (primaria -> ID .)
    TIMES           reduce using rule 59 (primaria -> ID .)
    DIVIDE          reduce using rule 59 (primaria -> ID .)
    MODULO          reduce using rule 59 (primaria -> ID .)
    GREATER         reduce using rule 59 (primaria -> ID .)
    LESS            reduce using rule 59 (primaria -> ID .)
    GREATEREQUAL    reduce using rule 59 (primaria -> ID .)
    LESSEQUAL       reduce using rule 59 (primaria -> ID .)
    NOTEQUAL        reduce using rule 59 (primaria -> ID .)
    EQUAL           reduce using rule 59 (primaria -> ID .)
    PLUS            reduce using rule 59 (primaria -> ID .)
    MINUS           reduce using rule 59 (primaria -> ID .)
    OROR            reduce using rule 59 (primaria -> ID .)
    ANDAND          reduce using rule 59 (primaria -> ID .)
    SEMICOLON       reduce using rule 59 (primaria -> ID .)
    RBRACKET        reduce using rule 59 (primaria -> ID .)


state 24

    (8) declaracaoVariavel -> TIPO ID EQUALS expressao . SEMICOLON

    SEMICOLON       shift and go to state 54


state 25

    (32) expressao -> expressaoLogica .
    (22) expressaoLogica -> expressaoLogica . OROR expressaoRelacional
    (23) expressaoLogica -> expressaoLogica . ANDAND expressaoRelacional

    SEMICOLON       reduce using rule 32 (expressao -> expressaoLogica .)
    LPAREN          reduce using rule 32 (expressao -> expressaoLogica .)
    RBRACKET        reduce using rule 32 (expressao -> expressaoLogica .)
    OROR            shift and go to state 55
    ANDAND          shift and go to state 56


state 26

    (33) expressao -> atribuicao .

    SEMICOLON       reduce using rule 33 (expressao -> atribuicao .)
    LPAREN          reduce using rule 33 (expressao -> atribuicao .)
    RBRACKET        reduce using rule 33 (expressao -> atribuicao .)


state 27

    (21) expressaoLogica -> expressaoRelacional .

    OROR            reduce using rule 21 (expressaoLogica -> expressaoRelacional .)
    ANDAND          reduce using rule 21 (expressaoLogica -> expressaoRelacional .)
    SEMICOLON       reduce using rule 21 (expressaoLogica -> expressaoRelacional .)
    LPAREN          reduce using rule 21 (expressaoLogica -> expressaoRelacional .)
    RBRACKET        reduce using rule 21 (expressaoLogica -> expressaoRelacional .)


state 28

    (24) expressaoLogica -> NOT . expressaoRelacional
    (25) expressaoRelacional -> . expressaoAritmetica
    (26) expressaoRelacional -> . expressaoAritmetica GREATER expressaoAritmetica
    (27) expressaoRelacional -> . expressaoAritmetica LESS expressaoAritmetica
    (28) expressaoRelacional -> . expressaoAritmetica GREATEREQUAL expressaoAritmetica
    (29) expressaoRelacional -> . expressaoAritmetica LESSEQUAL expressaoAritmetica
    (30) expressaoRelacional -> . expressaoAritmetica NOTEQUAL expressaoAritmetica
    (31) expressaoRelacional -> . expressaoAritmetica EQUAL expressaoAritmetica
    (42) expressaoAritmetica -> . expressaoMultiplicativa
    (43) expressaoAritmetica -> . expressaoAritmetica PLUS expressaoMultiplicativa
    (44) expressaoAritmetica -> . expressaoAritmetica MINUS expressaoMultiplicativa
    (45) expressaoMultiplicativa -> . expressaoMultiplicativa TIMES expressaoUnaria
    (46) expressaoMultiplicativa -> . expressaoMultiplicativa DIVIDE expressaoUnaria
    (47) expressaoMultiplicativa -> . expressaoMultiplicativa MODULO expressaoUnaria
    (48) expressaoMultiplicativa -> . expressaoUnaria
    (49) expressaoUnaria -> . expressaoPostfix
    (50) expressaoUnaria -> . MINUS expressaoPostfix
    (51) expressaoUnaria -> . PLUS PLUS expressaoPostfix
    (52) expressaoUnaria -> . MINUS MINUS expressaoPostfix
    (53) expressaoPostfix -> . primaria
    (54) expressaoPostfix -> . primaria LBRACKET expressao RBRACKET
    (55) expressaoPostfix -> . primaria LPAREN argumentos RPAREN
    (56) expressaoPostfix -> . primaria DOT ID
    (57) expressaoPostfix -> . primaria ARROW ID
    (59) primaria -> . ID
    (60) primaria -> . NUM_INT
    (61) primaria -> . NUM_DEC
    (62) primaria -> . LPAREN expressao LPAREN
    (63) primaria -> . TEXTO

    MINUS           shift and go to state 32
    PLUS            shift and go to state 31
    ID              shift and go to state 58
    NUM_INT         shift and go to state 37
    NUM_DEC         shift and go to state 38
    LPAREN          shift and go to state 36
    TEXTO           shift and go to state 39

    expressaoRelacional            shift and go to state 57
    expressaoAritmetica            shift and go to state 29
    expressaoMultiplicativa        shift and go to state 30
    expressaoUnaria                shift and go to state 33
    expressaoPostfix               shift and go to state 34
    primaria                       shift and go to state 35

state 29

    (25) expressaoRelacional -> expressaoAritmetica .
    (26) expressaoRelacional -> expressaoAritmetica . GREATER expressaoAritmetica
    (27) expressaoRelacional -> expressaoAritmetica . LESS expressaoAritmetica
    (28) expressaoRelacional -> expressaoAritmetica . GREATEREQUAL expressaoAritmetica
    (29) expressaoRelacional -> expressaoAritmetica . LESSEQUAL expressaoAritmetica
    (30) expressaoRelacional -> expressaoAritmetica . NOTEQUAL expressaoAritmetica
    (31) expressaoRelacional -> expressaoAritmetica . EQUAL expressaoAritmetica
    (43) expressaoAritmetica -> expressaoAritmetica . PLUS expressaoMultiplicativa
    (44) expressaoAritmetica -> expressaoAritmetica . MINUS expressaoMultiplicativa

    OROR            reduce using rule 25 (expressaoRelacional -> expressaoAritmetica .)
    ANDAND          reduce using rule 25 (expressaoRelacional -> expressaoAritmetica .)
    SEMICOLON       reduce using rule 25 (expressaoRelacional -> expressaoAritmetica .)
    LPAREN          reduce using rule 25 (expressaoRelacional -> expressaoAritmetica .)
    RBRACKET        reduce using rule 25 (expressaoRelacional -> expressaoAritmetica .)
    GREATER         shift and go to state 59
    LESS            shift and go to state 60
    GREATEREQUAL    shift and go to state 61
    LESSEQUAL       shift and go to state 62
    NOTEQUAL        shift and go to state 63
    EQUAL           shift and go to state 64
    PLUS            shift and go to state 65
    MINUS           shift and go to state 66


state 30

    (42) expressaoAritmetica -> expressaoMultiplicativa .
    (45) expressaoMultiplicativa -> expressaoMultiplicativa . TIMES expressaoUnaria
    (46) expressaoMultiplicativa -> expressaoMultiplicativa . DIVIDE expressaoUnaria
    (47) expressaoMultiplicativa -> expressaoMultiplicativa . MODULO expressaoUnaria

    GREATER         reduce using rule 42 (expressaoAritmetica -> expressaoMultiplicativa .)
    LESS            reduce using rule 42 (expressaoAritmetica -> expressaoMultiplicativa .)
    GREATEREQUAL    reduce using rule 42 (expressaoAritmetica -> expressaoMultiplicativa .)
    LESSEQUAL       reduce using rule 42 (expressaoAritmetica -> expressaoMultiplicativa .)
    NOTEQUAL        reduce using rule 42 (expressaoAritmetica -> expressaoMultiplicativa .)
    EQUAL           reduce using rule 42 (expressaoAritmetica -> expressaoMultiplicativa .)
    PLUS            reduce using rule 42 (expressaoAritmetica -> expressaoMultiplicativa .)
    MINUS           reduce using rule 42 (expressaoAritmetica -> expressaoMultiplicativa .)
    OROR            reduce using rule 42 (expressaoAritmetica -> expressaoMultiplicativa .)
    ANDAND          reduce using rule 42 (expressaoAritmetica -> expressaoMultiplicativa .)
    SEMICOLON       reduce using rule 42 (expressaoAritmetica -> expressaoMultiplicativa .)
    LPAREN          reduce using rule 42 (expressaoAritmetica -> expressaoMultiplicativa .)
    RBRACKET        reduce using rule 42 (expressaoAritmetica -> expressaoMultiplicativa .)
    TIMES           shift and go to state 67
    DIVIDE          shift and go to state 68
    MODULO          shift and go to state 69


state 31

    (51) expressaoUnaria -> PLUS . PLUS expressaoPostfix

    PLUS            shift and go to state 70


state 32

    (50) expressaoUnaria -> MINUS . expressaoPostfix
    (52) expressaoUnaria -> MINUS . MINUS expressaoPostfix
    (53) expressaoPostfix -> . primaria
    (54) expressaoPostfix -> . primaria LBRACKET expressao RBRACKET
    (55) expressaoPostfix -> . primaria LPAREN argumentos RPAREN
    (56) expressaoPostfix -> . primaria DOT ID
    (57) expressaoPostfix -> . primaria ARROW ID
    (59) primaria -> . ID
    (60) primaria -> . NUM_INT
    (61) primaria -> . NUM_DEC
    (62) primaria -> . LPAREN expressao LPAREN
    (63) primaria -> . TEXTO

    MINUS           shift and go to state 71
    ID              shift and go to state 58
    NUM_INT         shift and go to state 37
    NUM_DEC         shift and go to state 38
    LPAREN          shift and go to state 36
    TEXTO           shift and go to state 39

    expressaoPostfix               shift and go to state 72
    primaria                       shift and go to state 35

state 33

    (48) expressaoMultiplicativa -> expressaoUnaria .

    TIMES           reduce using rule 48 (expressaoMultiplicativa -> expressaoUnaria .)
    DIVIDE          reduce using rule 48 (expressaoMultiplicativa -> expressaoUnaria .)
    MODULO          reduce using rule 48 (expressaoMultiplicativa -> expressaoUnaria .)
    GREATER         reduce using rule 48 (expressaoMultiplicativa -> expressaoUnaria .)
    LESS            reduce using rule 48 (expressaoMultiplicativa -> expressaoUnaria .)
    GREATEREQUAL    reduce using rule 48 (expressaoMultiplicativa -> expressaoUnaria .)
    LESSEQUAL       reduce using rule 48 (expressaoMultiplicativa -> expressaoUnaria .)
    NOTEQUAL        reduce using rule 48 (expressaoMultiplicativa -> expressaoUnaria .)
    EQUAL           reduce using rule 48 (expressaoMultiplicativa -> expressaoUnaria .)
    PLUS            reduce using rule 48 (expressaoMultiplicativa -> expressaoUnaria .)
    MINUS           reduce using rule 48 (expressaoMultiplicativa -> expressaoUnaria .)
    OROR            reduce using rule 48 (expressaoMultiplicativa -> expressaoUnaria .)
    ANDAND          reduce using rule 48 (expressaoMultiplicativa -> expressaoUnaria .)
    SEMICOLON       reduce using rule 48 (expressaoMultiplicativa -> expressaoUnaria .)
    LPAREN          reduce using rule 48 (expressaoMultiplicativa -> expressaoUnaria .)
    RBRACKET        reduce using rule 48 (expressaoMultiplicativa -> expressaoUnaria .)


state 34

    (49) expressaoUnaria -> expressaoPostfix .

    TIMES           reduce using rule 49 (expressaoUnaria -> expressaoPostfix .)
    DIVIDE          reduce using rule 49 (expressaoUnaria -> expressaoPostfix .)
    MODULO          reduce using rule 49 (expressaoUnaria -> expressaoPostfix .)
    GREATER         reduce using rule 49 (expressaoUnaria -> expressaoPostfix .)
    LESS            reduce using rule 49 (expressaoUnaria -> expressaoPostfix .)
    GREATEREQUAL    reduce using rule 49 (expressaoUnaria -> expressaoPostfix .)
    LESSEQUAL       reduce using rule 49 (expressaoUnaria -> expressaoPostfix .)
    NOTEQUAL        reduce using rule 49 (expressaoUnaria -> expressaoPostfix .)
    EQUAL           reduce using rule 49 (expressaoUnaria -> expressaoPostfix .)
    PLUS            reduce using rule 49 (expressaoUnaria -> expressaoPostfix .)
    MINUS           reduce using rule 49 (expressaoUnaria -> expressaoPostfix .)
    OROR            reduce using rule 49 (expressaoUnaria -> expressaoPostfix .)
    ANDAND          reduce using rule 49 (expressaoUnaria -> expressaoPostfix .)
    SEMICOLON       reduce using rule 49 (expressaoUnaria -> expressaoPostfix .)
    LPAREN          reduce using rule 49 (expressaoUnaria -> expressaoPostfix .)
    RBRACKET        reduce using rule 49 (expressaoUnaria -> expressaoPostfix .)


state 35

    (53) expressaoPostfix -> primaria .
    (54) expressaoPostfix -> primaria . LBRACKET expressao RBRACKET
    (55) expressaoPostfix -> primaria . LPAREN argumentos RPAREN
    (56) expressaoPostfix -> primaria . DOT ID
    (57) expressaoPostfix -> primaria . ARROW ID
